# japan-egov-law-api-docs-skill

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.ja.md  README.md  SECURITY.md  SKILL.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  mcp-server-config.example.json  pyproject.toml
.claude/commands/: legal-jp-egov-api.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
agents/: openai.yaml
examples/: ios_legal_draft_evidence.py  ios_legal_draft_workflow.md
references/: egov-law-api-v2-quick-reference.md
scripts/: egov_law_api.py  egov_law_mcp_server.py  setup_repo_protection.sh
src/egov_law_api/: __init__.py  __main__.py  api_client.py  cli.py  mcp_server.py
