[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "japan-egov-law-api-docs-skill"
version = "0.1.0"
description = "CLI and MCP server for Japanese law retrieval via e-Gov Law API v2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "masa" }]
dependencies = ["mcp==1.26.0"]
keywords = ["codex-skill", "mcp", "egov", "japanese-law", "legal-tech"]

[project.scripts]
egov-law = "egov_law_api.cli:run"
egov-law-mcp = "egov_law_api.mcp_server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
